--- a/themes/aero-dual/languages/zh-CN.yml
+++ b/themes/aero-dual/languages/zh-CN.yml
@@ -1,7 +1,11 @@
 prev: 上一页
 next: 下一页
 untitled_post: 无标题文章
-uncategorized: Uncategorized
-untagged: Untagged
+uncategorized: 未分类
+untagged: 无标签
 no_excerpt: 暂无文章摘要
 archive_title: Blog Archives
+newer: 上一篇
+older: 下一篇
+share: 分享
+comment: 留言
